# CosmoAPI

./: .gitignore  README.md  environment.yaml  pyproject.toml  test.yaml
CosmoAPI/: __main__.py  api_io.py  firecrown_tools.py  io.py  logger_config.yaml  not_implemented.py
CosmoAPI/two_point_functions/: config_3x2pt_.yaml  generate_sacc.py  generate_theory.py  nz_loader.py  sacc_generator.py  tracers_io.py
CosmoAPI/two_pt_func/: generate_theory.py  nz_loader.py  sacc_generator.py  tracer_tools.py  tracers_io.py
CosmoAPI/two_pt_func/config_yamls/: config_3x2pt_.yaml
notebooks/: test_firecrown_yaml.ipynb  test_sacc_generation.ipynb
